--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1></h1>
+    <section class="section-center">
+        <h3>tired of boring lorem ipsum</h3>
+        <form class="lorem-form">
+          <label for="amount">paraghraps:</label>
+          <input type="number" name="amount" id="amount" placeholder="5">
+          <button type="sumbmit" class="btn">generate</button>
+        </form>
+        <article class="lorem-text"></article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
