--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
           <input type="number" name="amount" id="amount" placeholder="5">
           <button type="sumbmit" class="btn">generate</button>
         </form>
-        <article class="lorem-text"></article>
+        <article class="lorem-text">
+          <p class="result"></p>
+        </article>
     </section>
     <!-- javascript -->
     <script src="app.js"></script>
